--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ function update () {
     {
         ghostkat.x += 4;
         ghostkat.scale.x = 1;
+    }else{
+      ghostkat.x += 1;
     }
 
     if (cursors.up.isDown)
