--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function create () {
 
     for (var i = 0; i < 1; i++)
     {
-        spheres.create(9000, 300, 'sphere');
+        spheres.create(worldLength-420, 300, 'sphere');
     }
 
     lovebeams = game.add.group();
