--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function create () {
     lovebeams.setAll('outOfBoundsKill', true);
     lovebeams.setAll('checkWorldBounds', true);
 
-    ghostkat = game.add.sprite(200,worldHeight-300, 'ghostkat');
+    ghostkat = game.add.sprite(200,300, 'ghostkat');
 		game.physics.enable(ghostkat, Phaser.Physics.ARCADE);
 		ghostkat.anchor.x=.5;
     game.camera.follow(ghostkat, Phaser.Camera.FOLLOW_LOCKON, 0.1);
@@ -178,6 +178,6 @@ function fireLoveBeam(){
 }
 
 </script>
-<!--<iframe style='display:none' scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/265571244&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
---></body>
+<iframe style='display:none' scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/265571244&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
+</body>
 </html>
